syntax = "proto3";

package radium;

// ===================================================================
// Service Definition
// ===================================================================

service Radium {
  // A simple RPC to check if the server is running.
  rpc Ping (PingRequest) returns (PingResponse) {}

  // Agent CRUD Operations
  rpc CreateAgent (CreateAgentRequest) returns (CreateAgentResponse) {}
  rpc GetAgent (GetAgentRequest) returns (GetAgentResponse) {}
  rpc ListAgents (ListAgentsRequest) returns (ListAgentsResponse) {}
  rpc UpdateAgent (UpdateAgentRequest) returns (UpdateAgentResponse) {}
  rpc DeleteAgent (DeleteAgentRequest) returns (DeleteAgentResponse) {}

  // Workflow CRUD Operations
  rpc CreateWorkflow (CreateWorkflowRequest) returns (CreateWorkflowResponse) {}
  rpc GetWorkflow (GetWorkflowRequest) returns (GetWorkflowResponse) {}
  rpc ListWorkflows (ListWorkflowsRequest) returns (ListWorkflowsResponse) {}
  rpc UpdateWorkflow (UpdateWorkflowRequest) returns (UpdateWorkflowResponse) {}
  rpc DeleteWorkflow (DeleteWorkflowRequest) returns (DeleteWorkflowResponse) {}

  // Task CRUD Operations
  rpc CreateTask (CreateTaskRequest) returns (CreateTaskResponse) {}
  rpc GetTask (GetTaskRequest) returns (GetTaskResponse) {}
  rpc ListTasks (ListTasksRequest) returns (ListTasksResponse) {}
  rpc UpdateTask (UpdateTaskRequest) returns (UpdateTaskResponse) {}
  rpc DeleteTask (DeleteTaskRequest) returns (DeleteTaskResponse) {}
  rpc CancelTask (CancelTaskRequest) returns (CancelTaskResponse) {}
  rpc ResumeTask (ResumeTaskRequest) returns (ResumeTaskResponse) {}

  // Orchestrator Operations
  rpc ExecuteAgent (ExecuteAgentRequest) returns (ExecuteAgentResponse) {}
  rpc StartAgent (StartAgentRequest) returns (StartAgentResponse) {}
  rpc StopAgent (StopAgentRequest) returns (StopAgentResponse) {}
  rpc GetRegisteredAgents (GetRegisteredAgentsRequest) returns (GetRegisteredAgentsResponse) {}
  rpc RegisterAgent (RegisterAgentRequest) returns (RegisterAgentResponse) {}

  // Workflow Execution Operations
  rpc ExecuteWorkflow (ExecuteWorkflowRequest) returns (ExecuteWorkflowResponse) {}
  rpc GetWorkflowExecution (GetWorkflowExecutionRequest) returns (GetWorkflowExecutionResponse) {}
  rpc StopWorkflowExecution (StopWorkflowExecutionRequest) returns (StopWorkflowExecutionResponse) {}
  rpc ListWorkflowExecutions (ListWorkflowExecutionsRequest) returns (ListWorkflowExecutionsResponse) {}

  // Source Validation Operations
  rpc ValidateSources (ValidateSourcesRequest) returns (ValidateSourcesResponse) {}

  // Collaboration Operations
  rpc SendMessage (SendMessageRequest) returns (SendMessageResponse) {}
  rpc GetMessages (GetMessagesRequest) returns (GetMessagesResponse) {}
  rpc RequestResourceLock (RequestResourceLockRequest) returns (RequestResourceLockResponse) {}
  rpc ReleaseResourceLock (ReleaseResourceLockRequest) returns (ReleaseResourceLockResponse) {}
  rpc SpawnWorkerAgent (SpawnWorkerAgentRequest) returns (SpawnWorkerAgentResponse) {}
  rpc GetWorkerStatus (GetWorkerStatusRequest) returns (GetWorkerStatusResponse) {}
  rpc ReportProgress (ReportProgressRequest) returns (ReportProgressResponse) {}

  // Braingrid Operations
  rpc ReadBraingridRequirement (ReadBraingridRequirementRequest) returns (ReadBraingridRequirementResponse) {}
  rpc ListBraingridTasks (ListBraingridTasksRequest) returns (ListBraingridTasksResponse) {}
  rpc UpdateBraingridTaskStatus (UpdateBraingridTaskStatusRequest) returns (UpdateBraingridTaskStatusResponse) {}
  rpc UpdateBraingridRequirementStatus (UpdateBraingridRequirementStatusRequest) returns (UpdateBraingridRequirementStatusResponse) {}
  rpc CreateBraingridTasks (CreateBraingridTasksRequest) returns (CreateBraingridTasksResponse) {}
  rpc ExecuteBraingridRequirement (ExecuteBraingridRequirementRequest) returns (stream ExecutionProgressEvent) {}
  rpc ClearBraingridCache (ClearBraingridCacheRequest) returns (ClearBraingridCacheResponse) {}
  rpc GetBraingridCacheStats (GetBraingridCacheStatsRequest) returns (GetBraingridCacheStatsResponse) {}

  // Session Management Operations
  rpc CreateSession (CreateSessionRequest) returns (CreateSessionResponse) {}
  rpc ListSessions (ListSessionsRequest) returns (ListSessionsResponse) {}
  rpc AttachSession (AttachSessionRequest) returns (AttachSessionResponse) {}
  rpc SendSessionMessage (SendSessionMessageRequest) returns (SendSessionMessageResponse) {}
  rpc SessionEventsStream (stream SessionEvent) returns (stream SessionEvent) {}
}

// ===================================================================
// Core Data Structures
// ===================================================================

message Agent {
  string id = 1;
  string name = 2;
  string description = 3;
  string config_json = 4;
  string state = 5;
  string created_at = 6;
  string updated_at = 7;
}

message Workflow {
  string id = 1;
  string name = 2;
  string description = 3;
  repeated WorkflowStep steps = 4;
  string state = 5;
  string created_at = 6;
  string updated_at = 7;
}

message WorkflowStep {
  string id = 1;
  string name = 2;
  string description = 3;
  string task_id = 4;
  string config_json = 5;
  int32 order = 6;
}

message Task {
  string id = 1;
  string name = 2;
  string description = 3;
  string agent_id = 4;
  string input_json = 5;
  string state = 6;
  string result_json = 7;
  string created_at = 8;
  string updated_at = 9;
}

// ===================================================================
// Ping RPC
// ===================================================================

message PingRequest {
  string message = 1;
}

message PingResponse {
  string message = 1;
}

// ===================================================================
// Agent CRUD RPCs
// ===================================================================

message CreateAgentRequest {
  Agent agent = 1;
}

message CreateAgentResponse {
  string agent_id = 1;
}

message GetAgentRequest {
  string agent_id = 1;
}

message GetAgentResponse {
  Agent agent = 1;
}

message ListAgentsRequest {}

message ListAgentsResponse {
  repeated Agent agents = 1;
}

message UpdateAgentRequest {
  Agent agent = 1;
}

message UpdateAgentResponse {
  string agent_id = 1;
}

message DeleteAgentRequest {
  string agent_id = 1;
}

message DeleteAgentResponse {
  bool success = 1;
}

// ===================================================================
// Workflow CRUD RPCs
// ===================================================================

message CreateWorkflowRequest {
  Workflow workflow = 1;
}

message CreateWorkflowResponse {
  string workflow_id = 1;
}

message GetWorkflowRequest {
  string workflow_id = 1;
}

message GetWorkflowResponse {
  Workflow workflow = 1;
}

message ListWorkflowsRequest {}

message ListWorkflowsResponse {
  repeated Workflow workflows = 1;
}

message UpdateWorkflowRequest {
  Workflow workflow = 1;
}

message UpdateWorkflowResponse {
  string workflow_id = 1;
}

message DeleteWorkflowRequest {
  string workflow_id = 1;
}

message DeleteWorkflowResponse {
  bool success = 1;
}

// ===================================================================
// Task CRUD RPCs
// ===================================================================

message CreateTaskRequest {
  Task task = 1;
}

message CreateTaskResponse {
  string task_id = 1;
}

message GetTaskRequest {
  string task_id = 1;
}

message GetTaskResponse {
  Task task = 1;
}

message ListTasksRequest {}

message ListTasksResponse {
  repeated Task tasks = 1;
}

message UpdateTaskRequest {
  Task task = 1;
}

message UpdateTaskResponse {
  string task_id = 1;
}

message DeleteTaskRequest {
  string task_id = 1;
}

message DeleteTaskResponse {
  bool success = 1;
}

message CancelTaskRequest {
  string task_id = 1;
}

message CancelTaskResponse {
  bool success = 1;
  string message = 2;
}

message ResumeTaskRequest {
  string task_id = 1;
}

message ResumeTaskResponse {
  bool success = 1;
  string message = 2;
}

// ===================================================================
// Orchestrator RPCs
// ===================================================================

// Selection criteria for dynamic agent selection.
message SelectionCriteria {
  // Model class to match: "fast", "balanced", or "reasoning".
  // If not specified, defaults to "balanced".
  optional string model_class = 1;
}

message ExecuteAgentRequest {
  // Agent ID for direct addressing. If provided, selection criteria is ignored.
  optional string agent_id = 1;
  string input = 2;
  optional string model_type = 3;  // "mock", "gemini", "openai"
  optional string model_id = 4;
  // Selection criteria for dynamic agent selection.
  // Used when agent_id is not provided. If both are missing, returns INVALID_ARGUMENT.
  optional SelectionCriteria criteria = 5;
}

message ExecuteAgentResponse {
  bool success = 1;
  string output = 2;
  optional string error = 3;
  optional ResponseMetadata metadata = 4;
}

// Metadata from model response (e.g., finish_reason, safety_ratings, citations, logprobs).
message ResponseMetadata {
  optional string finish_reason = 1;  // e.g., "stop", "length", "safety"
  bool safety_blocked = 2;  // Whether content was blocked by safety filters
  optional int32 citation_count = 3;  // Number of citations in the response
  optional string model_version = 4;  // Model version identifier
  // Raw metadata as JSON string for provider-specific fields
  optional string raw_metadata_json = 5;
}

message StartAgentRequest {
  string agent_id = 1;
}

message StartAgentResponse {
  bool success = 1;
  optional string error = 2;
}

message StopAgentRequest {
  string agent_id = 1;
}

message StopAgentResponse {
  bool success = 1;
  optional string error = 2;
}

message GetRegisteredAgentsRequest {}

message GetRegisteredAgentsResponse {
  repeated RegisteredAgent agents = 1;
}

message RegisteredAgent {
  string id = 1;
  string description = 2;
  string state = 3;  // "idle", "running", "paused", "stopped", "error"
}

message RegisterAgentRequest {
  string agent_id = 1;
  string agent_type = 2;  // "echo", "simple", "chat"
  string description = 3;
}

message RegisterAgentResponse {
  bool success = 1;
  optional string error = 2;
}

// ===================================================================
// Workflow Execution RPCs
// ===================================================================

message ExecuteWorkflowRequest {
  string workflow_id = 1;
  bool use_parallel = 2;  // Whether to execute steps with same order in parallel
}

message ExecuteWorkflowResponse {
  string execution_id = 1;
  string workflow_id = 2;
  bool success = 3;
  optional string error = 4;
  string final_state = 5;  // JSON string of WorkflowState
}

message GetWorkflowExecutionRequest {
  string execution_id = 1;
}

message GetWorkflowExecutionResponse {
  WorkflowExecution execution = 1;
}

message StopWorkflowExecutionRequest {
  string workflow_id = 1;
}

message StopWorkflowExecutionResponse {
  bool success = 1;
  optional string error = 2;
}

message ListWorkflowExecutionsRequest {
  optional string workflow_id = 1;  // Filter by workflow ID, or empty for all
}

message ListWorkflowExecutionsResponse {
  repeated WorkflowExecution executions = 1;
}

message WorkflowExecution {
  string execution_id = 1;
  string workflow_id = 2;
  string context_json = 3;  // JSON string of ExecutionContext
  string started_at = 4;
  optional string completed_at = 5;
  string final_state = 6;  // JSON string of WorkflowState
}

// ===================================================================
// Source Validation RPCs
// ===================================================================

message ValidateSourcesRequest {
  repeated string sources = 1;  // List of URIs or file paths to validate
}

message SourceValidationResult {
  string source = 1;           // The source URI/path that was validated
  bool accessible = 2;          // Whether the source is accessible
  string error_message = 3;     // Error message if not accessible (empty if accessible)
  int64 size_bytes = 4;         // Size in bytes if known, 0 otherwise
}

message ValidateSourcesResponse {
  repeated SourceValidationResult results = 1;  // Validation result for each source
  bool all_valid = 2;                           // True if all sources are accessible
}

// ===================================================================
// Collaboration RPCs
// ===================================================================

message SendMessageRequest {
  string sender_id = 1;
  string recipient_id = 2;  // Empty for broadcast
  string message_type = 3;  // "TaskRequest", "TaskResponse", "StatusUpdate", "ResourceLock", "ResourceRelease"
  string payload_json = 4;  // JSON payload
}

message SendMessageResponse {
  bool success = 1;
  string message_id = 2;
  optional string error = 3;
}

message GetMessagesRequest {
  string agent_id = 1;
  bool undelivered_only = 2;  // If true, only return undelivered messages
}

message GetMessagesResponse {
  repeated AgentMessage messages = 1;
}

message AgentMessage {
  string id = 1;
  string sender_id = 2;
  optional string recipient_id = 3;
  string message_type = 4;
  string payload_json = 5;
  int64 timestamp = 6;
  bool delivered = 7;
}

message RequestResourceLockRequest {
  string agent_id = 1;
  string resource_path = 2;
  string lock_type = 3;  // "Read" or "Write"
  optional int64 timeout_secs = 4;
}

message RequestResourceLockResponse {
  bool success = 1;
  string lock_id = 2;
  optional string error = 3;
}

message ReleaseResourceLockRequest {
  string lock_id = 1;
  string agent_id = 2;
}

message ReleaseResourceLockResponse {
  bool success = 1;
  optional string error = 2;
}

message SpawnWorkerAgentRequest {
  string supervisor_id = 1;
  string worker_agent_id = 2;
  string task_input = 3;
  int32 delegation_depth = 4;
}

message SpawnWorkerAgentResponse {
  bool success = 1;
  string worker_id = 2;
  optional string error = 3;
}

message GetWorkerStatusRequest {
  string worker_id = 1;
}

message GetWorkerStatusResponse {
  bool success = 1;
  string status = 2;  // "Spawned", "Running", "Completed", "Failed", "Cancelled"
  optional string error = 3;
}

message ReportProgressRequest {
  string agent_id = 1;
  int32 percentage = 2;  // 0-100
  string status = 3;  // "Idle", "Working", "Waiting", "Blocked", "Complete", "Error"
  optional string message = 4;
}

message ReportProgressResponse {
  bool success = 1;
  optional string error = 2;
}

// ===================================================================
// Braingrid RPCs
// ===================================================================

message ReadBraingridRequirementRequest {
  string requirement_id = 1;
  optional string project_id = 2;
}

message ReadBraingridRequirementResponse {
  BraingridRequirement requirement = 1;
  optional string error = 2;
}

message ListBraingridTasksRequest {
  string requirement_id = 1;
  optional string project_id = 2;
}

message ListBraingridTasksResponse {
  repeated BraingridTask tasks = 1;
  optional string error = 2;
}

message UpdateBraingridTaskStatusRequest {
  string task_id = 1;
  string requirement_id = 2;
  string status = 3;  // PLANNED, IN_PROGRESS, COMPLETED, CANCELLED
  optional string project_id = 4;
  optional string notes = 5;
}

message UpdateBraingridTaskStatusResponse {
  bool success = 1;
  optional string error = 2;
}

message UpdateBraingridRequirementStatusRequest {
  string requirement_id = 1;
  string status = 2;  // IDEA, PLANNED, IN_PROGRESS, REVIEW, COMPLETED, CANCELLED
  optional string project_id = 3;
}

message UpdateBraingridRequirementStatusResponse {
  bool success = 1;
  optional string error = 2;
}

message CreateBraingridTasksRequest {
  string requirement_id = 1;
  optional string project_id = 2;
}

message CreateBraingridTasksResponse {
  repeated BraingridTask tasks = 1;
  optional string error = 2;
}

message ExecuteBraingridRequirementRequest {
  string requirement_id = 1;
  optional string project_id = 2;
}

message ExecutionProgressEvent {
  string event_type = 1;  // STARTED, TASK_STARTED, TASK_SUBSTEP, TASK_COMPLETED, TASK_FAILED, COMPLETED, FAILED
  optional string requirement_id = 2;
  optional string task_id = 3;
  optional string task_title = 4;
  optional int32 task_number = 5;
  optional int32 total_tasks = 6;
  optional string sub_step = 7;  // PREPARING, EXECUTING, VALIDATING, COMPLETING
  optional string error = 8;
  optional RequirementExecutionResult result = 9;
  optional string token_chunk = 10;  // Real-time token streaming from model
}

message RequirementExecutionResult {
  string requirement_id = 1;
  int32 tasks_completed = 2;
  int32 tasks_failed = 3;
  int64 execution_time_secs = 4;
  string final_status = 5;
  bool success = 6;
}

message ClearBraingridCacheRequest {
  optional string project_id = 1;
}

message ClearBraingridCacheResponse {
  bool success = 1;
  optional string error = 2;
}

message GetBraingridCacheStatsRequest {
  optional string project_id = 1;
}

message GetBraingridCacheStatsResponse {
  int64 hits = 1;
  int64 misses = 2;
  int32 size = 3;
  double hit_rate = 4;
  optional string error = 5;
}

message BraingridRequirement {
  string id = 1;
  string name = 2;
  string content = 3;
  string status = 4;  // IDEA, PLANNED, IN_PROGRESS, REVIEW, COMPLETED, CANCELLED
  optional string assigned_to = 5;
  repeated BraingridTask tasks = 6;
}

message BraingridTask {
  string id = 1;
  optional string short_id = 2;
  string number = 3;
  string title = 4;
  optional string description = 5;
  string status = 6;  // PLANNED, IN_PROGRESS, COMPLETED, CANCELLED
  optional string assigned_to = 7;
  repeated string dependencies = 8;
}

// ===================================================================
// Session Management RPCs
// ===================================================================

message Session {
  string id = 1;
  string created_at = 2;  // ISO 8601 timestamp
  string last_active = 3;  // ISO 8601 timestamp
  string state = 4;  // ACTIVE, PAUSED, COMPLETED, FAILED
  optional string agent_id = 5;
  optional string workspace_root = 6;
}

message CreateSessionRequest {
  optional string agent_id = 1;
  optional string workspace_root = 2;
  optional string session_name = 3;
}

message CreateSessionResponse {
  string session_id = 1;
  Session session = 2;
  optional string error = 3;
}

message ListSessionsRequest {
  optional int32 page = 1;  // Page number (1-indexed)
  optional int32 page_size = 2;  // Items per page (default: 50)
  optional string filter_state = 3;  // Filter by state: ACTIVE, PAUSED, COMPLETED, FAILED
  optional string filter_agent_id = 4;  // Filter by agent ID
}

message ListSessionsResponse {
  repeated Session sessions = 1;
  int32 total = 2;
  int32 page = 3;
  int32 page_size = 4;
  optional string error = 5;
}

message AttachSessionRequest {
  string session_id = 1;
}

message AttachSessionResponse {
  Session session = 1;
  repeated SessionMessage messages = 2;  // Full message history
  repeated SessionToolCall tool_calls = 3;  // Full tool call history
  repeated SessionApproval approvals = 4;  // Full approval history
  optional string error = 5;
}

message SendSessionMessageRequest {
  string session_id = 1;
  string message = 2;
  optional string role = 3;  // "user", "assistant", "system"
}

message SendSessionMessageResponse {
  bool success = 1;
  optional string error = 2;
}

// SessionEvent is a bidirectional streaming event for session communication
message SessionEvent {
  oneof event {
    ToolCallEvent tool_call = 1;
    ToolResultEvent tool_result = 2;
    ApprovalRequestEvent approval_request = 3;
    ApprovalResponseEvent approval_response = 4;
    MessageEvent message = 5;
    TokenChunkEvent token_chunk = 6;
  }
}

message ToolCallEvent {
  string session_id = 1;
  string tool_name = 2;
  string arguments_json = 3;  // JSON string of tool arguments
  int64 timestamp = 4;  // Unix timestamp in milliseconds
  optional string call_id = 5;  // Unique ID for this tool call
}

message ToolResultEvent {
  string session_id = 1;
  string tool_name = 2;
  string result_json = 3;  // JSON string of tool result
  int64 duration_ms = 4;  // Execution duration in milliseconds
  bool success = 5;
  optional string error = 6;
  optional string call_id = 7;  // Matches ToolCallEvent.call_id
  int64 timestamp = 8;  // Unix timestamp in milliseconds
}

message ApprovalRequestEvent {
  string session_id = 1;
  string tool_name = 2;
  string arguments_json = 3;  // JSON string of tool arguments
  string policy_rule = 4;  // Policy rule that triggered the approval
  optional string request_id = 5;  // Unique ID for this approval request
  int64 timestamp = 6;  // Unix timestamp in milliseconds
}

message ApprovalResponseEvent {
  string session_id = 1;
  bool approved = 2;
  optional string reason = 3;
  optional string request_id = 4;  // Matches ApprovalRequestEvent.request_id
  int64 timestamp = 5;  // Unix timestamp in milliseconds
}

message MessageEvent {
  string session_id = 1;
  string message = 2;
  string role = 3;  // "user", "assistant", "system"
  int64 timestamp = 4;  // Unix timestamp in milliseconds
}

message TokenChunkEvent {
  string session_id = 1;
  string token_chunk = 2;  // Partial token or full token
  bool is_complete = 3;  // Whether this is the final chunk for this token
  int64 timestamp = 4;  // Unix timestamp in milliseconds
}

// Supporting message types for session state
message SessionMessage {
  string id = 1;
  string content = 2;
  string role = 3;  // "user", "assistant", "system"
  string timestamp = 4;  // ISO 8601 timestamp
}

message SessionToolCall {
  string id = 1;
  string tool_name = 2;
  string arguments_json = 3;
  optional string result_json = 4;
  bool success = 5;
  optional string error = 6;
  int64 duration_ms = 7;
  string timestamp = 8;  // ISO 8601 timestamp
}

message SessionApproval {
  string id = 1;
  string tool_name = 2;
  string arguments_json = 3;
  string policy_rule = 4;
  bool approved = 5;
  optional string reason = 6;
  string timestamp = 7;  // ISO 8601 timestamp
}